<resources>
    <string name="app_name">Dwing Random call</string><!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_request">Send Request</string>
    <string name="gender_choice">Gender Choice</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_interstitial_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_rewards_id">ca-app-pub-3940256099942544/5224354917</string>
    <string name="friends">Friends</string>
    <string-array name="languages">
        <item>English</item>
        <item>Urdu</item>
    </string-array>
    <string name="dont_have_an_accounts">Dont_have_an_account?</string>
    <string name="signup_underlined"><u>Sign Up</u></string>
    <string name="signup">Sign Up</string>
    <string name="email">Email<font color='#FCA311'>*</font></string>
    <string name="name">Name<font color='#FCA311'>*</font></string>
    <string name="password">Password<font color='#FCA311'>*</font></string>
    <string name="first_name">First Name<font color='#FCA311'>*</font></string>
    <string name="logins">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="already_account">Already have an account?</string>
    <string name="enter_password">Enter Password</string>

    <string name="agora_app_id">6760be0b29af4dd88cc1011ae850ee97</string>
    <!-- Please leave it if not enable App Certificate -->
    <!-- You can generate a temporary token at https://dashboard.agora.io/projects -->
    <string name="agora_access_token">007eJxTYJAv+9R790Xz7R5Oli1GHXcaQs4+mKS/Z0b3sigT/rstWm4KDGbmZgZJqQZJRpaJaSYpKRYWycmGBoaGiakWpgapqZbmb4z4k7NaBJI/7XnKysgAgSA+B4NzRmJJUH5+LgMDAE41I5M=</string>
</resources>