<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".activity.LoginActivity">

   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">

           <TextView
               android:id="@+id/tvLogin"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:layout_marginTop="@dimen/_40sdp"
               android:fontFamily="@font/dongle_bold"
               android:text="@string/logins"
               android:textColor="@color/black"
               android:textSize="40sp"
               android:textStyle="bold" />


           <TextView
               android:id="@+id/tvName"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginHorizontal="@dimen/_30sdp"
               android:layout_marginTop="@dimen/_30sdp"
               android:fontFamily="@font/dongle_bold"
               android:visibility="gone"
               android:text="@string/name"
               android:textColor="@color/black"
               android:textSize="20sp"
               android:textStyle="bold" />

           <EditText
               android:id="@+id/edName"
               android:layout_width="match_parent"
               android:layout_height="@dimen/_35sdp"
               android:layout_marginHorizontal="@dimen/_30sdp"
               android:layout_marginTop="@dimen/_4sdp"
               android:background="@drawable/edit_text_background"
               android:visibility="gone"
               android:drawableStart="@drawable/ic_baseline_person_24"
               android:drawablePadding="10dp"
               android:drawableTint="@color/primaryColor"
               android:ems="10"
               android:fontFamily="@font/outfit_regular"
               android:hint="Enter Name"
               android:inputType="textPersonName"
               android:paddingHorizontal="@dimen/_10sdp"
               android:textColor="@color/edittext_color"
               android:textColorHint="@color/edittext_color" />

           <RadioGroup
               android:id="@+id/radioGroup"
               android:layout_width="match_parent"
               android:visibility="gone"
               android:layout_height="wrap_content"
               android:layout_marginHorizontal="@dimen/_30sdp"
               android:layout_marginTop="@dimen/_15sdp"
               android:checkedButton="@id/maleRadioBtn"
               android:orientation="horizontal">

               <RadioButton
                   android:id="@+id/maleRadioBtn"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:buttonTint="@color/primaryColor"
                   android:text="Male" />

               <RadioButton
                   android:id="@+id/femaleRadioBtn"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="@dimen/_20sdp"
                   android:buttonTint="@color/primaryColor"
                   android:text="Female" />


           </RadioGroup>

           <TextView
               android:id="@+id/tvEmail"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginHorizontal="@dimen/_30sdp"
               android:layout_marginTop="@dimen/_15sdp"
               android:fontFamily="@font/dongle_bold"
               android:text="@string/email"
               android:textColor="@color/black"
               android:textSize="20sp"
               android:textStyle="bold" />

           <EditText
               android:id="@+id/edEmail"
               android:layout_width="match_parent"
               android:layout_height="@dimen/_35sdp"
               android:layout_marginHorizontal="@dimen/_30sdp"
               android:layout_marginTop="@dimen/_4sdp"
               android:background="@drawable/edit_text_background"
               android:drawableStart="@drawable/ic_baseline_email_24"
               android:drawablePadding="10dp"
               android:drawableTint="@color/primaryColor"
               android:ems="10"
               android:fontFamily="@font/outfit_regular"
               android:hint="Enter Email"
               android:inputType="textEmailAddress"
               android:paddingHorizontal="@dimen/_10sdp"
               android:textColor="@color/edittext_color"
               android:textColorHint="@color/edittext_color" />

           <TextView
               android:id="@+id/tvPassword"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginHorizontal="@dimen/_30sdp"
               android:layout_marginTop="@dimen/_15sdp"
               android:fontFamily="@font/dongle_bold"
               android:text="@string/password"
               android:textColor="@color/black"
               android:textSize="20sp"
               android:textStyle="bold" />

           <EditText
               android:id="@+id/edPassword"
               android:layout_width="match_parent"
               android:layout_height="@dimen/_35sdp"
               android:layout_marginHorizontal="@dimen/_30sdp"
               android:layout_marginTop="@dimen/_4sdp"
               android:background="@drawable/edit_text_background"
               android:drawableStart="@drawable/padlock"
               android:drawablePadding="10dp"
               android:drawableTint="@color/primaryColor"
               android:ems="10"
               android:fontFamily="@font/outfit_regular"
               android:gravity="center_vertical"
               android:hint="@string/enter_password"
               android:inputType="textPassword"
               android:paddingHorizontal="@dimen/_10sdp"
               android:textColor="@color/edittext_color"
               android:textColorHint="@color/edittext_color" />

           <TextView
               android:id="@+id/tvlang"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginHorizontal="@dimen/_30sdp"
               android:layout_marginTop="@dimen/_15sdp"
               android:fontFamily="@font/dongle_bold"
               android:text="Select Language"
               android:textColor="@color/black"
               android:textSize="20sp"
               android:visibility="gone"
               android:textStyle="bold" />

           <RadioGroup
               android:id="@+id/langradioGroup"
               android:layout_width="match_parent"
               android:visibility="gone"
               android:layout_height="wrap_content"
               android:layout_marginHorizontal="@dimen/_30sdp"
               android:layout_marginTop="@dimen/_15sdp"
               android:checkedButton="@id/rdEnglish"
               android:orientation="vertical">
               <RadioButton
                   android:id="@+id/rdEnglish"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:fontFamily="@font/outfit_regular"
                   android:buttonTint="@color/primaryColor"
                   android:text="English" />

               <RadioButton
                   android:id="@+id/rdUrdu"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:fontFamily="@font/outfit_regular"
                   android:buttonTint="@color/primaryColor"
                   android:text="Urdu/Hindi" />

               <RadioButton
                   android:id="@+id/rdspanish"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:fontFamily="@font/outfit_regular"
                   android:buttonTint="@color/primaryColor"
                   android:text="Spanish" />
               <RadioButton
                   android:id="@+id/rdfrench"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:fontFamily="@font/outfit_regular"
                   android:text="French"
                   android:buttonTint="@color/primaryColor" />

               <RadioButton
                   android:id="@+id/rdgerman"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:fontFamily="@font/outfit_regular"
                   android:text="German"
                   android:buttonTint="@color/primaryColor"/>
               <RadioButton
                   android:id="@+id/rditalian"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:fontFamily="@font/outfit_regular"
                   android:text="Italian"
                   android:buttonTint="@color/primaryColor"/>

           </RadioGroup>


           <TextView
               android:id="@+id/tvForgotPassword"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="@dimen/_5sdp"
               android:layout_marginEnd="@dimen/_7sdp"
               android:background="?attr/selectableItemBackground"
               android:clickable="true"
               android:focusable="true"
               android:fontFamily="@font/dongle_regular"
               android:text="forget Password"
               android:textColor="@color/linkColor"
               android:textSize="@dimen/_16ssp"
               android:visibility="invisible" />


           <LinearLayout
               android:layout_width="320dp"
               android:layout_height="wrap_content"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               android:orientation="horizontal"
               android:layout_marginTop="10dp"
               android:layout_gravity="center"
               app:layout_constraintTop_toBottomOf="@+id/regPasswordConfirmInputText"
               android:id="@+id/terms_condition">

               <CheckBox
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center"
                   android:id="@+id/agreed"/>
               <TextView
                   android:id="@+id/terms_policy"
                   android:layout_width="match_parent"
                   android:layout_marginLeft="6dp"
                   android:layout_height="wrap_content"
                   android:text="By tapping Login and Accept, you acknowledge that you have read the Privacy Policy and agree to the Terms of Service."
                   android:textColor="@android:color/black"
                   android:textSize="12sp"
                   />
           </LinearLayout>

           <androidx.appcompat.widget.AppCompatButton
               android:id="@+id/btnLogin"
               android:layout_width="@dimen/_110sdp"
               android:layout_height="@dimen/_35sdp"
               android:layout_gravity="center"
               android:layout_marginTop="@dimen/_40sdp"
               android:background="@drawable/bg_button"
               android:fontFamily="@font/dongle_regular"
               android:text="login"
               android:gravity="center"
               android:textColor="@color/white"
               android:textSize="@dimen/_20ssp" />

           <LinearLayout
               android:id="@+id/layoutSignup"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="@dimen/_10sdp"
               android:gravity="center"
               android:padding="@dimen/_10sdp">

               <TextView
                   android:id="@+id/textt"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:fontFamily="@font/outfit_regular"
                   android:text="@string/don_t_have_an_account"
                   android:textColor="@color/black"
                   android:textSize="14sp" />

               <TextView
                   android:id="@+id/tvSignup"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="@dimen/_4sdp"
                   android:background="?attr/selectableItemBackground"
                   android:clickable="true"
                   android:focusable="true"
                   android:fontFamily="@font/outfit_regular"
                   android:text="@string/signup_underlined"
                   android:textColor="@color/primaryColor"
                   android:textSize="14sp" />

           </LinearLayout>


           <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:layout_marginTop="@dimen/_5sdp">

               <!--    <ImageView
                       android:id="@+id/ivFacebook"
                       android:layout_width="@dimen/_35sdp"
                       android:layout_height="@dimen/_35sdp"
                       android:background="?attr/selectableItemBackground"
                       android:clickable="true"
                       android:visibility="gone"
                       android:focusable="true"
                       android:padding="@dimen/_7sdp"
                       app:srcCompat="@drawable/facebook" />-->

               <ImageView
                   android:id="@+id/ivGoogle"
                   android:layout_width="@dimen/_35sdp"
                   android:layout_height="@dimen/_35sdp"
                   android:background="?attr/selectableItemBackground"
                   android:clickable="true"
                   android:focusable="true"
                   android:padding="@dimen/_7sdp"
                   app:srcCompat="@drawable/google" />

           </LinearLayout>

       </LinearLayout>

   </ScrollView>
</RelativeLayout>